--- a/index.html
+++ b/index.html
@@ -19,163 +19,185 @@
 
   <body>
     <header class="logo">
-      <nav>
-        <a class="logotype" href="./index.html"
-          >Web<span class="wrap">Studio</span></a
-        >
-
-        <ul class="nav-list">
-          <li>
-            <a href="./index.html" class="link">Studio</a>
-          </li>
-          <li>
-            <a href="" class="link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <address class="list">
-        <ul>
-          <li>
-            <a class="list-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="list-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="logotype" href="./index.html"
+            >Web<span class="wrap">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li>
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li>
+              <a href="" class="link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="list">
+          <ul>
+            <li>
+              <a class="list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="list-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="banner">
-        <h1 class="banner-up">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="banner-up">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
 
       <section>
-        <h2 class="title">Business principles</h2>
-        <ul class="list">
-          <li>
-            <h3 class="wrap-text">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="wrap-text">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="wrap-text">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="wrap-text">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Business principles</h2>
+          <ul class="list">
+            <li>
+              <h3 class="wrap-text">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="wrap-text">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="wrap-text">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="wrap-text">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="wrap-list">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li class="card-wrap">
-            <img src="./images/first-man.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="wrap-text">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="card-wrap">
-            <img src="./images/second-men.jpg" alt="Tom Ford" width="264" />
-            <h3 class="wrap-text">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="card-wrap">
-            <img
-              src="./images/first-woman.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="wrap-text">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="card-wrap">
-            <img src="./images/third-man.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="wrap-text">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+          <ul class="list">
+            <li class="card-wrap">
+              <img
+                src="./images/first-man.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="wrap-text">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="card-wrap">
+              <img src="./images/second-men.jpg" alt="Tom Ford" width="264" />
+              <h3 class="wrap-text">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="card-wrap">
+              <img
+                src="./images/first-woman.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="wrap-text">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="card-wrap">
+              <img
+                src="./images/third-man.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="wrap-text">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <h2 class="title">Our Portfolio</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/bank.jpg" alt="Banking App" width="360" />
-            <h3 class="wrap-text">Banking App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/telephone.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="wrap-text">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/computer.jpg" alt="Meditation App" width="360" />
-            <h3 class="wrap-text">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img src="./images/auto.jpg" alt="Taxi Service" width="360" />
-            <h3 class="wrap-text">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/tel.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="wrap-text">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img src="./images/girl.jpg" alt="Online Courses" width="360" />
-            <h3 class="wrap-text">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Our Portfolio</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/bank.jpg" alt="Banking App" width="360" />
+              <h3 class="wrap-text">Banking App</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/telephone.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="wrap-text">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/computer.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="wrap-text">Meditation App</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img src="./images/auto.jpg" alt="Taxi Service" width="360" />
+              <h3 class="wrap-text">Taxi Service</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/tel.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="wrap-text">Screen Illustrations</h3>
+              <p class="text">Design</p>
+            </li>
+            <li>
+              <img src="./images/girl.jpg" alt="Online Courses" width="360" />
+              <h3 class="wrap-text">Online Courses</h3>
+              <p class="text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="logo-title">
-      <a class="logotype wrapper" href="./index.html"
-        >Web<span class="wrap-span">Studio</span></a
-      >
-      <p class="wrapper-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logotype wrapper" href="./index.html"
+          >Web<span class="wrap-span">Studio</span></a
+        >
+        <p class="wrapper-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
