--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <body>
     <header class="logo">
-      <div class="container">
-        <nav>
+      <div class="container header-container">
+        <nav class="nav">
           <a class="logotype" href="./index.html"
             >Web<span class="wrap">Studio</span></a
           >
@@ -37,7 +37,7 @@
           </ul>
         </nav>
         <address class="list">
-          <ul>
+          <ul class="item-link">
             <li>
               <a class="list-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -61,32 +61,32 @@
         </div>
       </section>
 
-      <section>
+      <section class="section">
         <div class="container">
-          <h2 class="title">Business principles</h2>
-          <ul class="list">
-            <li>
+          <h2 class="visually-hidden">Business principles</h2>
+          <ul class="list list-wrapper">
+            <li class="list-item">
               <h3 class="wrap-text">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3 class="wrap-text">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3 class="wrap-text">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3 class="wrap-text">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -97,23 +97,27 @@
         </div>
       </section>
 
-      <section class="wrap-list">
+      <section class="wrap-list section">
         <div class="container">
           <h2 class="title">Our Team</h2>
-          <ul class="list">
+          <ul class="list wrapper-list">
             <li class="card-wrap">
               <img
                 src="./images/first-man.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="wrap-text">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="wrapper-card">
+                <h3 class="wrap-text">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
             <li class="card-wrap">
               <img src="./images/second-men.jpg" alt="Tom Ford" width="264" />
-              <h3 class="wrap-text">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="wrapper-card">
+                <h3 class="wrap-text">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
             <li class="card-wrap">
               <img
@@ -121,8 +125,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="wrap-text">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="wrapper-card">
+                <h3 class="wrap-text">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="card-wrap">
               <img
@@ -130,58 +136,72 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="wrap-text">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="wrapper-card">
+                <h3 class="wrap-text">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
 
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="title">Our Portfolio</h2>
-          <ul class="list">
-            <li>
+          <ul class="list wrap-pic">
+            <li class="pic-wrapper">
               <img src="./images/bank.jpg" alt="Banking App" width="360" />
-              <h3 class="wrap-text">Banking App</h3>
-              <p class="text">App</p>
+              <div class="list-picture">
+                <h3 class="wrap-text">Banking App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="pic-wrapper">
               <img
                 src="./images/telephone.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="wrap-text">Cashless Payment</h3>
-              <p class="text">Marketing</p>
+              <div class="list-picture">
+                <h3 class="wrap-text">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="pic-wrapper">
               <img
                 src="./images/computer.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="wrap-text">Meditation App</h3>
-              <p class="text">App</p>
+              <div class="list-picture">
+                <h3 class="wrap-text">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="pic-wrapper">
               <img src="./images/auto.jpg" alt="Taxi Service" width="360" />
-              <h3 class="wrap-text">Taxi Service</h3>
-              <p class="text">Marketing</p>
+              <div class="list-picture">
+                <h3 class="wrap-text">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="pic-wrapper">
               <img
                 src="./images/tel.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="wrap-text">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="list-picture">
+                <h3 class="wrap-text">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="pic-wrapper">
               <img src="./images/girl.jpg" alt="Online Courses" width="360" />
-              <h3 class="wrap-text">Online Courses</h3>
-              <p class="text">Marketing</p>
+              <div class="list-picture">
+                <h3 class="wrap-text">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -190,13 +210,15 @@
 
     <footer class="logo-title">
       <div class="container">
-        <a class="logotype wrapper" href="./index.html"
-          >Web<span class="wrap-span">Studio</span></a
-        >
-        <p class="wrapper-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="qoute-link">
+          <a class="logotype wrapper" href="./index.html"
+            >Web<span class="wrap-span">Studio</span></a
+          >
+          <p class="wrapper-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
