--- a/index.html
+++ b/index.html
@@ -210,15 +210,15 @@
 
     <footer class="logo-title">
       <div class="container">
-        <div class="qoute-link">
-          <a class="logotype wrapper" href="./index.html"
-            >Web<span class="wrap-span">Studio</span></a
-          >
-          <p class="wrapper-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <!-- <div class="qoute-link"> -->
+        <a class="logotype wrapper" href="./index.html"
+          >Web<span class="wrap-span">Studio</span></a
+        >
+        <p class="wrapper-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+        <!-- </div> -->
       </div>
     </footer>
   </body>
